# seriatim-server

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  RustConfig  template.env
migrations/2018-06-09-042504_create_users/: up.sql
migrations/2018-06-09-043636_create_documents/: down.sql  up.sql
migrations/2018-07-14-021338_add_facebook/: down.sql  up.sql
migrations/2018-08-03-015024_make_docs_public/: down.sql  up.sql
migrations/2018-08-11-231234_add_categories/: up.sql
migrations/2019-01-29-020857_add_styles/: down.sql  up.sql
migrations/2019-01-30-165726_add_toc/: down.sql  up.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/cors/: mod.rs
src/data/: category.rs  db.rs  document.rs  item.rs  mod.rs  schema.rs  style.rs  user.rs
src/data/memory/: mod.rs  redis.rs  session.rs
src/oauth/: facebook.rs  google.rs  http.rs  mod.rs  twitter.rs
src/routes/: document.rs  error.rs  io.rs  login.rs  mod.rs  user.rs
