[package]
name = "seriatim-server"
version = "0.1.0"
authors = ["avielmenter <aviel.menter@gmail.com>"]

[lib]
name="seriatim_codegen"
path = "src/lib.rs"
proc-macro = true

[dependencies]
rocket = { version = "^0.4.0", features = ["tls"] }
rocket_contrib = { version = "^0.4.0" }
rocket_codegen = { version = "^0.4.0" }
reqwest = "^0.8.5"
hmac-sha1 = "^0.1.3"
url = "^1.7.0"
rand = "^0.5.0"
base64 = "^0.9.1"
dotenv = "^0.13.0"
dotenv_codegen = "^0.11.0"
serde = "^1.0.62"
serde_derive = "^1.0.62"
serde_json = "^1.0.18"
diesel = { version = "^ 1.2.2", features = ["postgres", "r2d2", "uuid"] }
diesel-derive-enum = { version = "^0.4", features = ["postgres"] }
uuid = "^0.6.5"
quote = "^0.3.15"
syn = "^0.11"