[package]
name = "seriatim-server"
version = "0.1.0"
authors = ["avielmenter <aviel.menter@gmail.com>"]

[lib]
name="seriatim_codegen"
path = "src/lib.rs"
proc-macro = true

[dependencies]
rocket = { version = "0.4.2", features = ["tls"] }
rocket_contrib = "0.4.2"
rocket_codegen = "0.4.2"
reqwest = "0.9.20"
hmac-sha1 = "0.1.3"
url = "2.1.0"
rand = "0.7.2"
base64 = "0.10.1"
dotenv = "0.14.1"
dotenv_codegen = "0.14.1"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "uuid"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
uuid = "0.6.5"
quote = "1.0.2"
syn = "1.0.5"